# django_api_template

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
ci/: setup.cfg
docker/local/django/: Dockerfile  start
docker/local/django/celery/flower/: start
docker/local/django/celery/worker/: start
docker/local/frontend/: .dockerignore  Dockerfile
docker/local/nginx/: default.conf
envs/: local.env
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/app/: store.js
frontend/src/components/: Footer.jsx  Header.jsx  NotFound.jsx  Spinner.jsx
frontend/src/features/properties/: propertyAPIService.js  propertySlice.js
frontend/src/pages/: HomePage.jsx  PropertiesPage.jsx
websystem/: conftest.py  db.sqlite3  manage.py  pytest.ini
websystem/apps/profiles/: models.py  renderers.py  serializers.py  signals.py  views.py
websystem/apps/profiles/migrations/: 0001_initial.py
websystem/apps/profiles/tests/: factories.py
websystem/apps/properties/: models.py  views.py
websystem/apps/properties/migrations/: 0001_initial.py
websystem/apps/queries/: models.py  tasks.py  views.py
websystem/apps/queries/migrations/: 0001_initial.py
websystem/apps/ratings/: models.py  views.py
websystem/apps/ratings/migrations/: 0001_initial.py
websystem/apps/users/: admin.py  managers.py  models.py  serializers.py
websystem/apps/users/migrations/: 0001_add_user.py  0002_alter_user_last_name.py  0003_alter_last_name.py
websystem/apps/users/tests/: __init__.py  factories.py  test_views.py
websystem/book/: admin.py  models.py  serializers.py  views.py
websystem/book/migrations/: 0001_initial.py
websystem/envs/: local.env
websystem/helpers/: jwt_helper.py  pagination_helper.py
websystem/home/: urls.py  views.py
websystem/templates/: index.html
websystem/users/: admin.py  apps.py  manager.py  models.py  schemas.py  serializers.py  urls.py  views.py
websystem/users/migrations/: 0001_initial.py  0002_alter_user_date_joined_alter_user_email.py  0003_alter_user_role.py  0004_alter_user_options.py  0005_alter_user_date_joined_alter_user_role.py
websystem/websystem/: asgi.py  celery.py  choices.py  exceptions.py  filter_backends.py  mixins.py  permissions.py  routers.py  serializers.py  settings.py  urls.py  wsgi.py
websystem/websystem/settings/: base.py  dev.py
