[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["christianmasa <christian@linkernetworks.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
django-filter = "^21.1"
drf-spectacular = "^0.22.1"
pre-commit = "^2.18.1"
django-environ = "^0.8.1"
django-autoslug = "^1.9.8"
django-countries = "^7.3.2"
Pillow = "^9.1.0"
django-phonenumber-field = "^6.1.0"
phonenumbers = "^8.12.48"
psycopg2-binary = "^2.9.3"
isort = "^5.10.1"
PyJWT = "^2.4.0"
requests = "^2.27.1"
djoser = "^2.1.0"
django-extensions = "^3.1.5"
celery = "^5.2.6"
flower = "^1.0.0"
Faker = "^13.11.1"
factory-boy = "^3.2.1"
pytest = "^7.1.2"
pytest-factoryboy = "^2.3.0"
pytest-django = "^4.5.2"
django-celery-email = "^3.0.0"
redis = "^4.3.1"
watchdog = "^2.1.7"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
